[project]
name = "ucla_plha"
version = "1.2.0"
description = "A code for performing probabilistic liquefaction hazard analysis inside the hazard integral"
authors = [
    {name = "Meera L. Kota"},
    {name = "Scott J. Brandenberg"}
    ]
license = "LICENSE"
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
