[project]
name = "ucla_plha"
version = "1.2.0"
description = "A code for performing probabilistic liquefaction hazard analysis inside the hazard integral"
authors = [
    {name = "Meera L. Kota"},
    {name = "Scott J. Brandenberg"}
    ]
license = "LICENSE"
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.5"
scipy = "^1.16.3"
importlib-resources = "^6.5.2"
jsonschema = "^4.25.1"
