[project]
name = "ucla_plha"
version = "2.0.2"
description = "A code for performing probabilistic liquefaction hazard analysis inside the hazard integral"
authors = [{ name = "Meera L. Kota" }, { name = "Scott J. Brandenberg" }]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
numpy = ">=1.23.3"
scipy = ">=1.9.2"
jsonschema = ">=4.25.1"
pandas = ">=1.5.2"

[dependency-groups]
# Dependencies for running Jupyter notebooks
# To start a Jupyter notebook with these dependencies:
# poetry install --with jupyter
# poetry run jupyter notebook
jupyter = [
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pygmm (>=0.8.0,<0.9.0)",
]
